--- a/projects/ngui-lib/src/lib/atom/button/button.component.html
+++ b/projects/ngui-lib/src/lib/atom/button/button.component.html
@@ -1,3 +1,1 @@
-<button (click)="increment()">
-    {{ text }}
-</button>
+<button mat-flat-button color="primary" class="atom-material-button" (click)="increment()">{{ text }}</button>
