--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div style="text-align:center" class="paint-it-bro">
     <h1>
         Welcome to {{ title }}!
     </h1>
@@ -10,7 +10,8 @@
 <h1>Lib test</h1>
 <div>
     <ngui-ngui-lib></ngui-ngui-lib>
-    <ngui-button [buttonText]="'lalalalala'" (counter)="getCounter($event)"></ngui-button>
+    <ngui-button [buttonText]="'lalalalalaaaa'" (counter)="getCounter($event)"></ngui-button>
+    <ngui-input></ngui-input>
 </div>
 <ul>
     <li>
@@ -23,3 +24,4 @@
         <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
     </li>
 </ul>
+
